syntax = "proto3";

package dev.httpmarco.polocloud.explanation.group;

import "dev/httpmarco/polocloud/explanation/utils.proto";

message GroupFindRequest {
   string name = 1;
}

service ClusterGroupService {
  rpc findGroup(GroupFindRequest) returns (ClusterGroupExplanation);
}
